app-test/testdata/typesystem/neg/pattern-matching-alternative-guard-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-alternative-guard-type/src/patmat.cal:7:33: error: Incompatible types; expected bool but was int.
                        n guard n + 1 : n end // error
                                ^^^^^